--- a/report/report.tex
+++ b/report/report.tex
@@ -72,4 +72,4 @@ network analysis \cite{snacourse}, and as an entry in the GitHub Data Challenge
 \end{thebibliography}
 
 \end{document}
-% vim: ts=4 sts=4 sw=4 et
+% vim: ts=4 sts=4 sw=4 et tw=80
