--- a/report/github.bib
+++ b/report/github.bib
@@ -1,17 +1,21 @@
 @misc{snacourse,
     author       = "Lada Adamic",
     title        = "Social Network Analysis",
+    year         = "2013",
     howpublished = "\url{https://www.coursera.org/course/sna}"
 }
 @misc{doll12,
     author       = "Brian Doll",
     title        = "Programming Language Correlation Dataset",
-    year         = 2011,
+    year         = "2012",
+	month        = "April",
     howpublished = "\url{https://gist.github.com/briandoll/e0637fff9c8eec988528}"
 }
 @misc{doll13,
     author       = "Brian Doll",
     title        = "The {GitHub} Data Challenge {II}",
+    year         = "2013",
+	month        = "April",
     howpublished = "\url{https://github.com/blog/1450}"
 }
 @misc{github,
@@ -30,29 +34,46 @@
 @misc{rodrigues12,
     author       = "Rodrigues, Eduarda Mendes",
 	title        = "{GitHub} Data",
+	year         = "2012",
+	month        = "May",
     howpublished = "\url{http://labs.sapo.pt/networds/2012/05/09/github-data/}"
 }
 @misc{shah13,
     author       = "Shah, Akshay",
 	title        = "Language Use on GitHub",
+	year         = "2013",
+	month        = "February",
     howpublished = "\url{http://datahackermd.com/2013/language-use-on-github/}"
 }
 @inproceedings{thung2013,
-  title        = {Network Structure of Social Coding in GitHub},
-  author       = {Thung, Ferdian and Lo, David and Jiang, Lingxiao},
-  year         = {2013},
-  organization = {17th European Conference on Software Maintenance and Reengineering (CSMR)}
+    title        = {Network Structure of Social Coding in GitHub},
+    author       = {Thung, Ferdian and Lo, David and Jiang, Lingxiao},
+    year         = {2013},
+    organization = {17th European Conference on Software Maintenance and Reengineering (CSMR)}
 }
 @article{marrama,
-  title  = {Social Coding: Evaluating {Github's} Network using Weighted Community Detection},
-  author = {Marrama, Joseph and Low, Tiffany}
+    title  = {Social Coding: Evaluating {Github's} Network using Weighted Community Detection},
+    author = {Marrama, Joseph and Low, Tiffany},
+    note   = "Course project report"
 }
 @article{khadke,
-  title  = {An Analysis of {GitHub's} Collaborative Software Network},
-  author = {Nikhil Khadke and Ming Han Teh and Sharon Tan}
+    title  = {An Analysis of {GitHub's} Collaborative Software Network},
+    author = {Nikhil Khadke and Ming Han Teh and Sharon Tan},
+    year   = "2012",
+    month  = "December",
+    note   = "Course project report"
 }
 @article{sarma,
-  title  = {{SAGH}: A Social Analysis tool for {GitHub}},
-  author = {Akash Das Sarma and Ashish Gupta and Jaeho Shin}
+    title  = {{SAGH}: A Social Analysis tool for {GitHub}},
+    author = {Akash Das Sarma and Ashish Gupta and Jaeho Shin},
+    year   = "2012",
+    month  = "December",
+    note   = "Course project report"
 }
+@misc{mjwillson,
+    title        = "ProgLanguageVisualize",
+    author       = "Matthew Wilson",
+    howpublished = "\url{https://github.com/mjwillson/ProgLangVisualise}"
+}
+
 % vim: ts=4 sts=4 sw=4 et tw=80
