add Strata talk

--- a/report/github.bib
+++ b/report/github.bib
@@ -75,5 +75,11 @@
     author       = "Matthew Wilson",
     howpublished = "\url{https://github.com/mjwillson/ProgLangVisualise}"
 }
+@misc{strata13,
+    author="Ilya Grigorik and Brian Doll",
+    title="Analyzing Millions of GitHub Commits: What Makes Developers Happy,
+    Angry, and Everything in Between?",
+    howpublished="\url{https://youtu.be/U_LNo_cSc70}"
+}
 
 % vim: ts=4 sts=4 sw=4 et tw=80
