--- a/report/github.tex
+++ b/report/github.tex
@@ -59,17 +59,16 @@ Using a second query, we computed a set of weighted edges between these
 repositories. This weight is based on two types of events: \emph{pushes}, where
 a user adds new changes to a repository, and \emph{pull-request merges}, where a
 user without push access proposes changes that are then reviewed and added to
-the repository by another user who does. (In preliminary analysis, accounting
-only for pushes resulted in a relatively disconnected graph, presumably because
-few users have push access to more than a few related repositories.)
-
-We first computed contribution weights $C(u, r)$ for user-repository pairs as the
-number of times the user has either pushed to the repository or had a
-pull-request accepted to the repository. Note that this counts pull-request
-merges for both the user who submitted the request and the user who pushed the
-merge; this seems acceptable, since it accounts for the work involved in
-reviewing a pull-request and better ties repository maintainers to their
-repositories.
+the repository by another user who does.\footnote{In preliminary analysis,
+accounting only for pushes resulted in a relatively disconnected graph,
+presumably because few users have push access to more than a few related
+repositories.} We first computed contribution weights $C(u, r)$ for
+user-repository pairs as the number of times the user has either pushed to the
+repository or had a pull-request accepted to the repository.\footnote{Note that
+this counts pull-request merges for both the user who submitted the request and
+the user who pushed the merge; this seems acceptable, since it accounts for the
+work involved in reviewing a pull-request and better ties repository maintainers
+to their repositories.}
 
 Weights between repositories were then computed by examining users who have
 contributed to each of a pair of repositories, and defining the weight between
