--- a/report/github.tex
+++ b/report/github.tex
@@ -3,7 +3,7 @@
 \usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{courier}
-\usepackage[T1]{fontenc}
+%\usepackage[T1]{fontenc}
 \usepackage{listings}
 \lstset{
     basicstyle=\ttfamily\small,
