hide link colors and use proportional font

--- a/report/github.tex
+++ b/report/github.tex
@@ -1,6 +1,7 @@
 \documentclass[twocolumn]{article}
 \usepackage{fullpage}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
+\urlstyle{same}
 \usepackage{amsmath}
 \usepackage{courier}
 %\usepackage[T1]{fontenc}
