--- a/report/github.tex
+++ b/report/github.tex
@@ -110,13 +110,13 @@ network analysis \cite{snacourse}, and as an entry in the GitHub Data Challenge
 \label{app:code}
 \subsection{SQL queries}
 
-\subsubsection{\texttt{github-repo-attributes.sql}: Fetch data on top
+\subsubsection{\texttt{repo-attributes.sql}: Fetch data on top
 repositories}
-\lstinputlisting[language=SQL]{../github-repo-attributes.sql}
+\lstinputlisting[language=SQL]{../repo-attributes.sql}
 
-\subsubsection{\texttt{github-repo-weights.sql}: Determine weights between top
+\subsubsection{\texttt{repo-weights.sql}: Determine weights between top
 repositories}
-\lstinputlisting[language=SQL]{../github-repo-weights.sql}
+\lstinputlisting[language=SQL]{../repo-weights.sql}
 
 \end{document}
 % vim: ts=4 sts=4 sw=4 et tw=80
