--- a/report/github.tex
+++ b/report/github.tex
@@ -82,10 +82,10 @@ where $W$ gives the weight of the edge between two repositories, $C$ is the
 contribution weight defined previously, and $U$ is the set of all GitHub users
 who have contributed to any of these top repositories.
 
-The remaining analysis was performed using Python and the igraph library, and
-visualizations were created using Gephi. The SQL and Python code used is
-reproduced in appendix~\ref{app:code}, and all code and data files are available
-in this project's repository at
+The remaining analysis was performed using Python 2.7 and version 0.6.5 of the
+igraph library, and visualizations were created using Gephi 0.8.2. The SQL and
+Python code used is reproduced in appendix~\ref{app:code}, and all code and data
+files are available in this project's repository at
 \url{https://github.com/coyotebush/github-network-analysis}.
 
 \begin{itemize}
