add Opsahl articles

--- a/report/github.bib
+++ b/report/github.bib
@@ -76,10 +76,48 @@
     howpublished = "\url{https://github.com/mjwillson/ProgLangVisualise}"
 }
 @misc{strata13,
-    author="Ilya Grigorik and Brian Doll",
-    title="Analyzing Millions of GitHub Commits: What Makes Developers Happy,
-    Angry, and Everything in Between?",
-    howpublished="\url{https://youtu.be/U_LNo_cSc70}"
+    author       = "Ilya Grigorik and Brian Doll",
+    title        = "Analyzing Millions of GitHub Commits: What Makes Developers
+        Happy, Angry, and Everything in Between?",
+    howpublished = "\url{https://youtu.be/U_LNo_cSc70}"
+}
+@article{opsahl09,
+    title    = "Clustering in weighted networks ",
+    journal  = "Social Networks ",
+    volume   = "31",
+    number   = "2",
+    pages    = "155 - 163",
+    year     = "2009",
+    note     = "",
+    issn     = "0378-8733",
+    doi      = "10.1016/j.socnet.2009.02.002",
+    url      = "http://www.sciencedirect.com/science/article/pii/S0378873309000070",
+    author   = "Tore Opsahl and Pietro Panzarasa",
+    keywords = "Clustering",
+    keywords = "Transitivity",
+    keywords = "Weighted networks "
+}
+@article{opsahl11,
+    title    = "Triadic closure in two-mode networks: Redefining the global and
+        local clustering coefficients ",
+    journal  = "Social Networks ",
+    volume   = "35",
+    year     = "2011",
+    issn     = "0378-8733",
+    doi      = "10.1016/j.socnet.2011.07.001",
+    url      =
+        "http://www.sciencedirect.com/science/article/pii/S0378873311000360",
+    author   = "Tore Opsahl",
+    keywords = "Clustering coefficient",
+    keywords = "Random networks",
+    keywords = "Triadic closure",
+    keywords = "Two-mode networks "
+}
+@misc{opsahlproj,
+    author       = "Tore Opsahl",
+    title        = "Projection",
+    howpublished =
+        "\url{http://toreopsahl.com/tnet/two-mode-networks/projection/}"
 }
 
 % vim: ts=4 sts=4 sw=4 et tw=80
