add Weber article

--- a/report/github.bib
+++ b/report/github.bib
@@ -119,5 +119,20 @@
     howpublished =
         "\url{http://toreopsahl.com/tnet/two-mode-networks/projection/}"
 }
+@article {weber12,
+    author    = {Weber, Nicholas M.},
+    title     = {Combined methods, thick descriptions: Languages of
+        collaboration on Github},
+    journal   = {Proceedings of the American Society for Information Science
+        and Technology},
+    volume    = {49},
+    number    = {1},
+    publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+    issn      = {1550-8390},
+    url       = {http://dx.doi.org/10.1002/meet.14504901347},
+    doi       = {10.1002/meet.14504901347},
+    pages     = {1--4},
+    year      = {2012},
+}
 
 % vim: ts=4 sts=4 sw=4 et tw=80
