--- a/report/github.tex
+++ b/report/github.tex
@@ -35,13 +35,15 @@ collaborations between projects using the same programming language (or
 especially the same software framework) will be common, resulting in communities
 identified by a programming language.
 
-Some recent analyses have examined the programming languages associated with each
-user via their repositories to determine conditional probabilities \cite{doll12}
-or correlations \cite{shah13} relating to use of language pairs. A visualization
-of the bipartite graph of organizations (groups of users) and languages
-\cite{rodrigues12} won third place in the 2012 GitHub Data Challenge . We
-approach the problem somewhat differently by constructing the one-mode network
-of repositories and examining its community structure.
+Some recent analyses have examined the programming languages associated with
+each user via their repositories to determine conditional probabilities
+\cite{doll12} or correlations \cite{shah13} relating to use of language pairs. A
+visualization of the bipartite graph of organizations (groups of users) and
+languages \cite{rodrigues12} won third place in the 2012 GitHub Data Challenge,
+and \cite{weber12} performed preliminary analysis of user communities based on
+primary programming languages. We approach the problem somewhat differently by
+constructing the one-mode network of repositories and examining its community
+structure.
 
 Methods for generating the the project-project and user-user networks are
 described in \cite{thung2013} and used to find nodes with high PageRank values.
