ref GitHub Archive

--- a/report/github.bib
+++ b/report/github.bib
@@ -23,6 +23,11 @@
     key          = "GitHub",
     howpublished = "\url{https://github.com/}"
 }
+@misc{githubarchive,
+    title        = "{GitHub Archive}",
+    key          = "GitHub Archive",
+    howpublished = "\url{http://www.githubarchive.org/}"
+}
 @inproceedings{heller2011,
     title        = {Visualizing collaboration and influence in the open-source software community},
     author       = {Heller, Brandon and Marschner, Eli and Rosenfeld, Evan and Heer, Jeffrey},
