show link colors again

--- a/report/github.tex
+++ b/report/github.tex
@@ -1,6 +1,6 @@
 \documentclass[twocolumn]{article}
 \usepackage{fullpage}
-\usepackage[hidelinks]{hyperref}
+\usepackage{hyperref}
 \urlstyle{same}
 \usepackage{amsmath}
 \usepackage{courier}
