better working about choice of aggregate

--- a/report/github.tex
+++ b/report/github.tex
@@ -71,8 +71,8 @@ edge between repositories $i$ and $j$ as the sum over all users who have
 contributed to both of the geometric mean of the number of times they have
 contributed to each. The geometric mean was chosen because it is high when the
 counts of contributions to both repositories are high, but low when either is
-low, and the impact of increasing either diminishes. That is, the the weights
-are defined by
+low, and the impact of increasing either is diminishing. That is, the the
+weights are defined by
 
 \begin{equation}
     W_{ij} \equiv \sum_u \sqrt{C_{ui} \cdot C_{uj}}
