disable section numbering

--- a/report/github.tex
+++ b/report/github.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath}
 \usepackage{courier}
 %\usepackage[T1]{fontenc}
+\setcounter{secnumdepth}{-1}
 
 \title{Programming language communities on GitHub}
 \author{Corey Ford}
