tweak \cite command

--- a/report/github.tex
+++ b/report/github.tex
@@ -84,8 +84,8 @@ weights are defined by
 \end{equation}
 
 similar to the approach of \cite{marrama}, and drawing insight from
-\cite{opsahlproj} and \cite{opsahl11}, where $W$ gives the edge weight, $C$ is
-the contribution weight defined previously, and $u$ ranges over all GitHub users
+\cite{opsahlproj,opsahl11}, where $W$ gives the edge weight, $C$ is the
+contribution weight defined previously, and $u$ ranges over all GitHub users
 (who have contributed to both of these repositories).
 
 \section{Analysis}
