add more section headers

--- a/report/github.tex
+++ b/report/github.tex
@@ -106,6 +106,14 @@ community).
         the programming language composition of the resulting structure.
 \end{itemize}
 
+\subsection{Visualization}
+
+\subsection{Communities Defined by Language}
+
+\subsection{Languages in Detected Communities}
+
+\section{Conclusions}
+
 \section{Acknowledgements}
 This project is being developed both as the final project for a course in social
 network analysis \cite{snacourse}, and as an entry in the GitHub Data Challenge
